// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessagePlanChannelTemplate should match snapshot for empty state (EMAIL) 1`] = `
<div>
  <div
    class="channel-template-outer"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Email
      </h3>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="choose-template-link-EMAIL"
            href="/message-plans/choose-email-template/test-routing-config-id?lockNumber=42"
          >
            Choose
            <span
              class="nhsuk-u-visually-hidden"
            >
              Email
            </span>
             
            template
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for empty state (LETTER) 1`] = `
<div>
  <div
    class="channel-template-outer"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Letter
      </h3>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="choose-template-link-LETTER"
            href="/message-plans/choose-standard-english-letter-template/test-routing-config-id?lockNumber=42"
          >
            Choose
            <span
              class="nhsuk-u-visually-hidden"
            >
              Letter
            </span>
             
            template
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for empty state (NHSAPP) 1`] = `
<div>
  <div
    class="channel-template-outer"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        NHS App
      </h3>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="choose-template-link-NHSAPP"
            href="/message-plans/choose-nhs-app-template/test-routing-config-id?lockNumber=42"
          >
            Choose
            <span
              class="nhsuk-u-visually-hidden"
            >
              NHS App
            </span>
             
            template
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for empty state (SMS) 1`] = `
<div>
  <div
    class="channel-template-outer"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Text message (SMS)
      </h3>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="choose-template-link-SMS"
            href="/message-plans/choose-text-message-template/test-routing-config-id?lockNumber=42"
          >
            Choose
            <span
              class="nhsuk-u-visually-hidden"
            >
              Text message (SMS)
            </span>
             
            template
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for selected template state (EMAIL) 1`] = `
<div>
  <div
    class="channel-template-outer"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Email
      </h3>
      <p
        class="nhsuk-u-margin-bottom-2"
        data-testid="template-name-EMAIL"
      >
        Covid 65+ reminder v1
      </p>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="change-template-link-EMAIL"
            href="/message-plans/choose-email-template/test-routing-config-id?lockNumber=42"
          >
            Change
            <span
              class="nhsuk-u-visually-hidden"
            >
              Email
            </span>
             
            template
          </a>
        </li>
        <li>
          <form>
            <input
              name="channel"
              readonly=""
              type="hidden"
              value="EMAIL"
            />
            <input
              name="routingConfigId"
              readonly=""
              type="hidden"
              value="test-routing-config-id"
            />
            <input
              name="lockNumber"
              readonly=""
              type="hidden"
              value="42"
            />
            <button
              class="channel-template-link--remove nhsuk-link"
              data-testid="remove-template-link-EMAIL"
              formaction="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
              type="submit"
            >
              Remove
              <span
                class="nhsuk-u-visually-hidden"
              >
                Email
              </span>
               
              template
            </button>
          </form>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for selected template state (LETTER) 1`] = `
<div>
  <div
    class="channel-template-outer"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Letter
      </h3>
      <p
        class="nhsuk-u-margin-bottom-2"
        data-testid="template-name-LETTER"
      >
        Covid 65+ reminder v1
      </p>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="change-template-link-LETTER"
            href="/message-plans/choose-standard-english-letter-template/test-routing-config-id?lockNumber=42"
          >
            Change
            <span
              class="nhsuk-u-visually-hidden"
            >
              Letter
            </span>
             
            template
          </a>
        </li>
        <li>
          <form>
            <input
              name="channel"
              readonly=""
              type="hidden"
              value="LETTER"
            />
            <input
              name="routingConfigId"
              readonly=""
              type="hidden"
              value="test-routing-config-id"
            />
            <input
              name="lockNumber"
              readonly=""
              type="hidden"
              value="42"
            />
            <button
              class="channel-template-link--remove nhsuk-link"
              data-testid="remove-template-link-LETTER"
              formaction="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
              type="submit"
            >
              Remove
              <span
                class="nhsuk-u-visually-hidden"
              >
                Letter
              </span>
               
              template
            </button>
          </form>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for selected template state (NHSAPP) 1`] = `
<div>
  <div
    class="channel-template-outer"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        NHS App
      </h3>
      <p
        class="nhsuk-u-margin-bottom-2"
        data-testid="template-name-NHSAPP"
      >
        Covid 65+ reminder v1
      </p>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="change-template-link-NHSAPP"
            href="/message-plans/choose-nhs-app-template/test-routing-config-id?lockNumber=42"
          >
            Change
            <span
              class="nhsuk-u-visually-hidden"
            >
              NHS App
            </span>
             
            template
          </a>
        </li>
        <li>
          <form>
            <input
              name="channel"
              readonly=""
              type="hidden"
              value="NHSAPP"
            />
            <input
              name="routingConfigId"
              readonly=""
              type="hidden"
              value="test-routing-config-id"
            />
            <input
              name="lockNumber"
              readonly=""
              type="hidden"
              value="42"
            />
            <button
              class="channel-template-link--remove nhsuk-link"
              data-testid="remove-template-link-NHSAPP"
              formaction="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
              type="submit"
            >
              Remove
              <span
                class="nhsuk-u-visually-hidden"
              >
                NHS App
              </span>
               
              template
            </button>
          </form>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MessagePlanChannelTemplate should match snapshot for selected template state (SMS) 1`] = `
<div>
  <div
    class="channel-template-outer"
  >
    <div
      class="channel-template-inner"
    >
      <h3
        class="nhsuk-heading-s"
      >
        Text message (SMS)
      </h3>
      <p
        class="nhsuk-u-margin-bottom-2"
        data-testid="template-name-SMS"
      >
        Covid 65+ reminder v1
      </p>
      <ul
        class="channel-template-actions"
      >
        <li>
          <a
            class="nhsuk-link nhsuk-link--no-visited-state"
            data-testid="change-template-link-SMS"
            href="/message-plans/choose-text-message-template/test-routing-config-id?lockNumber=42"
          >
            Change
            <span
              class="nhsuk-u-visually-hidden"
            >
              Text message (SMS)
            </span>
             
            template
          </a>
        </li>
        <li>
          <form>
            <input
              name="channel"
              readonly=""
              type="hidden"
              value="SMS"
            />
            <input
              name="routingConfigId"
              readonly=""
              type="hidden"
              value="test-routing-config-id"
            />
            <input
              name="lockNumber"
              readonly=""
              type="hidden"
              value="42"
            />
            <button
              class="channel-template-link--remove nhsuk-link"
              data-testid="remove-template-link-SMS"
              formaction="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
              type="submit"
            >
              Remove
              <span
                class="nhsuk-u-visually-hidden"
              >
                Text message (SMS)
              </span>
               
              template
            </button>
          </form>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
